--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
   },
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "cors": "^2.8.5",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
     "express": "4.17.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recharts": "^2.4.3",
-    "typescript": "4.9.5"
+    "recharts": "^2.4.3"
   },
   "devDependencies": {
-    "prop-types": "^15.8.1"
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^3.3.2",
+    "typescript": "4.9.5"
   }
 }
